--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                     <nav>
                         <img class="logo" src="images/Logo_dark_green.svg" alt="logo">
                         <ul>
-                            <li><a href="">Intro</a></li>
-                            <li><a href=""> Trivia</a></li>
+                            <li><a href="#intro">Intro</a></li>
+                            <li><a href="#trivia"> Trivia</a></li>
                             <li><a href="">Team</a></li>
                             <li><a href="">Contact us</a></li>
                         </ul>
@@ -32,12 +32,27 @@
                 Let's get started already!
             </div>
             
-            <section class="intro">
-
+            <section id ="intro" class="intro">
+                <div class="doubts intro-sub">
+                    <img src="" alt="">
+                    <p>Get your doubts cleared about starting your investments and conquer your fears.</p>
+                </div>
+                <div class="grow intro-sub">
+                    <img src="" alt="">
+                    <p>
+                        A growth mindset doesn't just help you financially but in every other area of your life as well.
+                    </p>
+                </div>
+                <div class="community intro-sub">
+                    <img src="" alt="">
+                    <p>
+                        Get to know others who are figuring things out just like you. You don't have to do it alone!
+                    </p>
+                </div>
             </section>
-            <section id = "trivia"></section>
-            <section id="about"></section>
             <section class="parallax"></section>
+            <section id = "trivia"></section>
+            <section id="team"></section>
             <section id="contact"></section>
             <footer>
 
