Added parallax effect for trivia section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                             <li><a href="#intro">Intro</a></li>
                             <li><a href="#trivia"> Trivia</a></li>
                             <li><a href="">Team</a></li>
-                            <li><a href="">Contact us</a></li>
+                            <li><a href="#contact">Contact us</a></li>
                         </ul>
                     </nav>
                     <div class="header-content">
@@ -46,14 +46,21 @@
                 <div class="community intro-sub">
                     <img src="" alt="">
                     <p>
-                        Get to know others who are figuring things out just like you. You don't have to do it alone!
+                        Surround yourself with peers who are figuring things out just like you. You don't have to do it alone!
                     </p>
                 </div>
             </section>
-            <section class="parallax"></section>
-            <section id = "trivia"></section>
-            <section id="team"></section>
-            <section id="contact"></section>
+            <section id ="trivia" class="parallax">
+                <p class="parallax-text">
+                    Did you know that recent studies have shown that approximately 70% of the female population 
+                    is financially illiterate, making it less likely for women to invest, 
+                    compounding any financial disadvantages and limiting their collective influence globally.
+                    Hejfin intents to make this situation better.
+                </p>
+            </section>
+            <!-- <section id = "trivia"></section> -->
+            <section class="team" id="team"></section>
+            <section class="contact" id="contact"></section>
             <footer>
 
             </footer>
