Footer fixed, meta tags added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Financial education for women and non-binary">
+    <meta name="keywords" content="growth, finance, women, money, investments">
+    <meta name="author" content="Hejfin">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/main.css" />
     <title>Hejfin</title>
@@ -13,11 +16,13 @@
             <div class="header-container">
                 <header>
                     <nav>
-                        <img class="logo" src="images/Logo_dark_green.svg" alt="logo">
+                        <a href="/">
+                            <img class="logo" src="images/Logo_dark_green.svg" alt="logo">
+                        </a>
                         <ul>
                             <li><a href="#intro">Intro</a></li>
-                            <li><a href="#trivia"> Trivia</a></li>
-                            <li><a href="">Team</a></li>
+                            <li><a href="#team"> Trivia</a></li>
+                            <li><a href="#team">Team</a></li>
                             <li><a href="#contact">Contact us</a></li>
                         </ul>
                     </nav>
@@ -62,7 +67,7 @@
             <section class="team" id="team"></section>
             <section class="contact" id="contact"></section>
             <footer>
-
+                <p class="copyright">&copy; HejFin</p>
             </footer>
 
         </main>
