Set the images for intro

--- a/index.html
+++ b/index.html
@@ -39,17 +39,17 @@
             
             <section id ="intro" class="intro">
                 <div class="doubts intro-sub">
-                    <img src="" alt="">
+                    <img id="doubts-img" src="images/doubts.jpg" alt="woman with doubts">
                     <p>Get your doubts cleared about starting your investments and conquer your fears.</p>
                 </div>
                 <div class="grow intro-sub">
-                    <img src="" alt="">
+                    <img src="images/water-money.jpg" alt="woman watering moeny">
                     <p>
                         A growth mindset doesn't just help you financially but in every other area of your life as well.
                     </p>
                 </div>
                 <div class="community intro-sub">
-                    <img src="" alt="">
+                    <img src="images/shutterstock_1663782013 (1).jpg" alt="woman with coins">
                     <p>
                         Surround yourself with peers who are figuring things out just like you. You don't have to do it alone!
                     </p>
@@ -72,6 +72,5 @@
 
         </main>
     </div>
-    
 </body>
 </html>
