--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
             <section id ="intro" class="intro">
                 <div class="doubts intro-sub">
                     <img id="doubts-img" src="images/doubts.jpg" alt="woman with doubts">
-                    <p>Get your doubts cleared about starting your investments and conquer your fears.</p>
+                    <p>
+                        Don't let your doubts stop you! Get them cleared and conquer your fears.
+                    </p>
                 </div>
                 <div class="grow intro-sub">
-                    <img src="images/water-money.jpg" alt="woman watering moeny">
+                    <img src="images/water-money.jpg" alt="woman watering money">
                     <p>
                         A growth mindset doesn't just help you financially but in every other area of your life as well.
                     </p>
