--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <section class="team" id="team"></section>
             <section class="contact" id="contact"></section>
             <footer>
-                <p class="copyright">&copy; HejFin</p>
+                <span class="copyright">&copy; HejFin</p>
             </footer>
 
         </main>
