Resized intro images

--- a/index.html
+++ b/index.html
@@ -39,19 +39,25 @@
             
             <section id ="intro" class="intro">
                 <div class="doubts intro-sub">
-                    <img id="doubts-img" src="images/doubts.jpg" alt="woman with doubts">
+                    <div class="img-container">
+                        <img id="doubts-img" src="images/copy-2.jpg" alt="woman with doubts">
+                    </div>
                     <p>
                         Don't let your doubts stop you! Get them cleared and conquer your fears.
                     </p>
                 </div>
                 <div class="grow intro-sub">
-                    <img src="images/water-money.jpg" alt="woman watering money">
+                    <div class="img-container">
+                        <img src="images/water-money.jpg" alt="woman watering money">
+                    </div>
                     <p>
                         A growth mindset doesn't just help you financially but in every other area of your life as well.
                     </p>
                 </div>
                 <div class="community intro-sub">
-                    <img src="images/shutterstock_1663782013 (1).jpg" alt="woman with coins">
+                    <div class="img-container">
+                        <img src="images/copy-1.jpg" alt="woman with coins">
+                    </div>
                     <p>
                         Surround yourself with peers who are figuring things out just like you. You don't have to do it alone!
                     </p>
