Optimized the images and started working to make navbar sticky

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <main>
             <div class="header-container">
                 <header>
-                    <nav>
+                    <nav id="navbar">
                         <a href="/">
-                            <img class="logo" src="images/Logo_dark_green.svg" alt="logo">
+                            <img class="logo" src="images/Full_logo.png" alt="logo">
                         </a>
                         <ul>
                             <li><a href="#intro">Intro</a></li>
@@ -39,19 +39,19 @@
             
             <section id ="intro" class="intro">
                 <div class="doubts intro-sub">
-                    <img id="doubts-img" src="images/copy-2.jpg" alt="woman with doubts">
+                    <img id="doubts-img" src="images/copy-2.jpg" alt="woman with doubts" loading="lazy">
                     <p>
                         Don't let your doubts stop you! Get them cleared and conquer your fears.
                     </p>
                 </div>
                 <div class="grow intro-sub">
-                    <img src="images/water-money.jpg" alt="woman watering money">
+                    <img src="images/water-it.png" alt="woman watering money" loading="lazy">
                     <p>
                         A growth mindset doesn't just help you financially but in every other area of your life as well.
                     </p>
                 </div>
                 <div class="community intro-sub">
-                    <img src="images/copy-1.jpg" alt="woman with coins">
+                    <img src="images/copy-1.jpg" alt="woman with coins" loading="lazy">
                     <p>
                         Surround yourself with peers who are figuring things out just like you. You don't have to do it alone!
                     </p>
@@ -74,5 +74,6 @@
 
         </main>
     </div>
+    <script src="assets/js/main.js"></script>
 </body>
 </html>
