Made the navbar sticky

--- a/index.html
+++ b/index.html
@@ -13,19 +13,20 @@
 <body>
     <div class="container">
         <main>
+            <nav id="navbar">
+                <a href="/">
+                    <img class="logo" src="images/Full_logo.png" alt="logo">
+                </a>
+                <ul class="links">
+                    <li><a href="#intro">Intro</a></li>
+                    <li><a href="#team"> Trivia</a></li>
+                    <li><a href="#team">Team</a></li>
+                    <li><a href="#contact">Contact us</a></li>
+                </ul>
+            </nav>
             <div class="header-container">
                 <header>
-                    <nav id="navbar">
-                        <a href="/">
-                            <img class="logo" src="images/Full_logo.png" alt="logo">
-                        </a>
-                        <ul>
-                            <li><a href="#intro">Intro</a></li>
-                            <li><a href="#team"> Trivia</a></li>
-                            <li><a href="#team">Team</a></li>
-                            <li><a href="#contact">Contact us</a></li>
-                        </ul>
-                    </nav>
+                   
                     <div class="header-content">
                         <h1>HEJFIN</h1>
                         <h2>Your Journey Towards Growth Starts Here</h2>
