Added trivia section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </a>
                 <ul class="links">
                     <li><a href="#intro">Intro</a></li>
-                    <li><a href="#team"> Trivia</a></li>
+                    <li><a href="#trivia"> Trivia</a></li>
                     <li><a href="#team">Team</a></li>
                     <li><a href="#contact">Contact us</a></li>
                 </ul>
@@ -56,7 +56,7 @@
                     </p>
                 </div>
             </section>
-            <section id ="trivia" class="parallax">
+            <section  class="parallax">
                 <p class="parallax-text">
                     Did you know that recent studies have shown that approximately 70% of the female population 
                     is financially illiterate, making it less likely for women to invest, 
@@ -64,7 +64,20 @@
                     Hejfin intents to make this situation better.
                 </p>
             </section>
-            <!-- <section id = "trivia"></section> -->
+            <section class="trivia" id = "trivia">
+                <div class="trivia-content">
+                    <h3>Our goal</h3>
+                    <p>
+                        Our goal is to provide a one-stop reliable financial education app for female/non-binary people to 
+                        help them improve the management of their personal finances as well as start investing. 
+                        The users will get reliable and jargon-free information from the platform which aims to provide 
+                        knowledge, skills, and fostering the motivation to engage with responsible investing.
+                    </p>
+                </div>
+                <div class="trivia-image">
+                    <img src="images/women-chat.jpg" alt="women chatting">
+                </div>
+            </section>
             <section class="team" id="team"></section>
             <section class="contact" id="contact"></section>
             <footer>
