social links now open in a new tab

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
                 <a href="/"><img src="images/Logo_dark_green.svg" alt="logo" /></a>
                 <span class="copyright">&copy; HejFin</span>
                 <div class="socials">
-                    <a href="https://www.facebook.com/hejfintech" aria-label="facebook page"><i class="fa-brands fa-facebook" ></i></a>
-                    <a href="https://www.instagram.com/hejfin_tech/?hl=en" aria-label="instagram page"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://www.linkedin.com/company/hejfin/" aria-label="linkedin page"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.facebook.com/hejfintech" aria-label="facebook page" target="_blank"><i class="fa-brands fa-facebook" ></i></a>
+                    <a href="https://www.instagram.com/hejfin_tech/?hl=en" aria-label="instagram page" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/company/hejfin/" aria-label="linkedin page" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
             </footer>
 
