Trivia section is now responsive

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul class="links">
                     <li><a href="#intro">Intro</a></li>
                     <li><a href="#trivia"> Trivia</a></li>
-                    <li><a href="#team">Team</a></li>
+                    <!-- <li><a href="#team">Team</a></li> -->
                     <li><a href="#contact">Contact us</a></li>
                 </ul>
             </nav>
@@ -56,14 +56,14 @@
                     </p>
                 </div>
             </section>
-            <!-- <section  class="parallax">
+            <section  class="parallax">
                 <p class="parallax-text">
                     Did you know that recent studies have shown that approximately 70% of the female population 
                     is financially illiterate, making it less likely for women to invest, 
                     compounding any financial disadvantages and limiting their collective influence globally.
                     Hejfin intents to make this situation better.
                 </p>
-            </section> -->
+            </section>
             <section class="trivia" id = "trivia">
                 <div class="trivia-content">
                     <h3>Our goal</h3>
