--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <main>
-            <nav id="navbar">
+            <!-- <nav id="navbar">
                 <a href="/">
                     <img class="logo" src="images/Full_logo.png" alt="logo">
                 </a>
@@ -21,10 +21,10 @@
                     <li><a href="#intro">Intro</a></li>
                     <li><a href="#trivia"> Trivia</a></li>
                     <!-- <li><a href="#team">Team</a></li> -->
-                    <li><a href="#contact">Contact us</a></li>
+                    <!-- <li><a href="#contact">Contact us</a></li>
                 </ul>
-            </nav>
-            <div class="header-container">
+            </nav>-->
+             <div class="header-container">
                 <header>
                     <div class="header-content">
                         <h1>HEJFIN</h1>
@@ -34,7 +34,7 @@
             </div>
             <div class="alert">
                 Let's get started already!
-            </div>
+            </div> 
             
             <section id ="intro" class="intro">
                 <div class="doubts intro-sub">
