Tried fixing heaer and alert, started with mobile menu

--- a/index.html
+++ b/index.html
@@ -13,17 +13,25 @@
 <body>
     <div class="container">
         <main>
-            <!-- <nav id="navbar">
+             <nav id="navbar">
                 <a href="/">
                     <img class="logo" src="images/Full_logo.png" alt="logo">
                 </a>
                 <ul class="links">
                     <li><a href="#intro">Intro</a></li>
-                    <li><a href="#trivia"> Trivia</a></li>
+                    <li><a href="#trivia"> Trivia</a></li> 
                     <!-- <li><a href="#team">Team</a></li> -->
-                    <!-- <li><a href="#contact">Contact us</a></li>
+                    <li><a href="#contact">Contact us</a></li>
                 </ul>
-            </nav>-->
+                <div class="mobile-menu hidden">
+                    <span class="mobile-menu-icon ">
+                        <hr>
+                        <hr>
+                        <hr>
+                    </span>
+                </div>
+                
+            </nav> 
              <div class="header-container">
                 <header>
                     <div class="header-content">
