Background image for header replaced with color, h1 size increased

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     </a>
                     <ul class="links">
                         <li><a href="#intro">Intro</a></li>
-                        <li><a href="#trivia"> Trivia</a></li> 
+                        <li><a href="#trivia"> Our Goal</a></li> 
                         <!-- <li><a href="#team">Team</a></li> -->
                         <li><a href="#contact">Contact us</a></li>
                     </ul>
@@ -36,9 +36,9 @@
                     <nav class="secondary-nav " >
                         <ul class="mobile-links-list">
                             <li class="mobile-link"><a href="#intro">Intro</a></li>
-                            <li class="mobile-link"><a href="#trivia"> Trivia</a></li> 
+                            <li class="mobile-link"><a href="#trivia"> Our Goal</a></li> 
                             <!-- <li><a href="#team">Team</a></li>-->
-                             <li class="mobile-link"><a href="#contact">Contact us</a></li>
+                             <li class="mobile-link"><a href="#contact">Contact Us</a></li>
                         </ul>
                     </nav>
                 </div>
