Added overlay, justified text in goal section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <li><a href="#intro">Intro</a></li>
                         <li><a href="#trivia"> Our Goal</a></li> 
                         <!-- <li><a href="#team">Team</a></li> -->
-                        <li><a href="#contact">Contact us</a></li>
+                        <li><a href="#contact">Join us</a></li>
                     </ul>
                     <div class="mobile-menu-button">
                         <span class="mobile-menu-icon ">
@@ -38,7 +38,7 @@
                             <li class="mobile-link"><a href="#intro">Intro</a></li>
                             <li class="mobile-link"><a href="#trivia"> Our Goal</a></li> 
                             <!-- <li><a href="#team">Team</a></li>-->
-                             <li class="mobile-link"><a href="#contact">Contact Us</a></li>
+                             <li class="mobile-link"><a href="#contact">Join Us</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -78,6 +78,7 @@
                 </div>
             </section>
             <section  class="parallax">
+                <div class="overlay"></div>
                 <p class="parallax-text">
                     Did you know that recent studies have shown that approximately 70% of the female population 
                     is financially illiterate, making it less likely for women to invest, 
@@ -96,7 +97,7 @@
                     </p>
                 </div>
                 <div class="trivia-image">
-                    <img src="images/women-chat.jpg" alt="women chatting">
+                    <img src="images/Rectangle.jpg" alt="women chatting">
                 </div>
             </section>
             <section class="team" id="team"></section>
