Pushed overlay under the text

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
             </section>
             <section  class="parallax">
                 <div class="overlay"></div>
+                <div class="parallax-image"></div>
                 <p class="parallax-text">
                     Did you know that recent studies have shown that approximately 70% of the female population 
                     is financially illiterate, making it less likely for women to invest, 
