--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="growth, finance, women, money, investments">
     <meta name="author" content="Hejfin">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/Logo_dark_green.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <link rel="stylesheet" href="assets/css/main.css" />
     <title>Hejfin</title>
 </head>
@@ -54,7 +55,7 @@
                 </header>
             </div>
             <div class="alert">
-                Let's get started already!
+                Let's get started!
             </div> 
             
             <section id ="intro" class="intro">
