Changed text on join button

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           </div>
           <button
                   class="calendly-popup primary"
-            > Confirm user interview </button>
+            > Join Us</button>
 
           <!-- <form name="contactUs" method="post" action="#" data-netlify="true">
             <div class="fields">
