Edited text in contact section

--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
         <section class="contact" id="contact">
           <h3>Join Us</h3>
           <p class="contact-text">
-            Join us and be a part of this exciting process. Contact us if you
-            are interested in being a part of our user testing process. We would
+            Join us and be a part of this exciting process. Contact us if you are currently a resident of Sweden and would like to be
+            a part of our beta testing process. We would
             love to hear from you.
           </p>
           <div class="hidden calendly">
