Changed app screenshot

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </p>
           </div>
           <div class="trivia-image">
-            <img src="images/Rectangle.jpg" alt="women chatting" />
+            <img src="images/Rectangle.png" alt="app screenshot" />
           </div>
         </section>
         <section class="team" id="team"></section>
